fix some layout problems

--- a/src/app/components/empty-sidebar.component.css
+++ b/src/app/components/empty-sidebar.component.css
@@ -1,18 +1,31 @@
 :host {
-  position: absolute;
-  left: 50%;
-  transform: translateX(-50%);
   font-size: 15px;
+  left: 50%;
+  pointer-events: none;
+  position: absolute;
   text-align: center;
+  top: 25px;
+  transform: translateX(-50%);
   -webkit-user-select: none;
   -moz-user-select: none;
   user-select: none;
-  pointer-events: none;
-  top: 25px;
 }
 
 @media screen and (min-width: 1150px) {
   :host {
-    font-size: 16px;
+    /* TODO */
+    /* font-size: 16px; */
   }
+}
+
+img {
+  margin-right: 5px;
+  margin-top: -5px;
+  position: relative;
+  top: 5px;
+  width: 22px;
+}
+
+img {
+  filter: var(--dark-mode-filter);
 }
