--- a/src/app/components/items.component.css
+++ b/src/app/components/items.component.css
@@ -21,3 +21,8 @@
     padding: 5px 5px 7px;
   }
 }
+
+:host {
+  /* TODO */
+  width: 100%;
+}
