--- a/src/app/components/sidebar-inner.component.css
+++ b/src/app/components/sidebar-inner.component.css
@@ -1,4 +1,5 @@
 :host {
-  /* FIXME */
-  display: inline-flex;
+  /* TODO */
+  display: flex;
+  width: 100%;
 }
